--- a/Historico.html
+++ b/Historico.html
@@ -41,6 +41,12 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>14/02 Terça-Feira</strong> 2.9 <br>
+    Bom, hoje foi o dia do overflow, sai colocando em TODAS páginas do site, combinado com width e height ele fica muito bom, usem !!! <br>
+    Atualizei a Página Principal, PáginaHTML, TagsCSS, TagsJavaScript <br>
+    Hoje foi o dia do JavaScript, perdi muito tempo ativando a função e chamando ela <br>
+    <br><br>
+
     <strong>13/02 Segunda-Feira</strong> 2.8 <br>
     Hoje eu foquei mais na aparência do site, ajeitando menus e alterando cores, ontem dei mais 1 dica ( CFB Cursos ) e hoje postei mais algumas lá <br>
     Removi o Jogo da Cobrinha Cell pois os controles não estão funcionando<br>
