--- a/TagsCSS.html
+++ b/TagsCSS.html
@@ -122,6 +122,7 @@
 
     <p>07-<strong>font-family: 'nomedafonte';</strong><br>
     Aqui estamos declarando o nome da família da fonte<br>
+    font-family é o tipo de letra <br>
     Por padrão o VisualStudioCode ( VSC ) vem com várias, mas a pessoa pode instalar mais<br>
     Pra declarar fonte veja @font-face { }<br>
     Site que recomendo é <a href="https://www.dafont.com/pt/" target="_blank">https://www.dafont.com/pt/</a> e o <a href="https://fonts.google.com/" target="_blank">https://fonts.google.com/</a><br>
@@ -187,6 +188,10 @@
 
     <p>07-<strong>text-shadow: Xpx Ypx Zpx Cor;</strong><br>
     Define o sombreamento<br>
+    Xpx = deslocamento lateral <br>
+    Ypx = deslocamento vertical <br>
+    Zpx = espalhamento da sombra <br>
+    Cor = cor da sombra <br>
     </p>
 
     <p>06-<strong>width: XXXpx;</strong><br>
