--- a/TagsJavaScript.html
+++ b/TagsJavaScript.html
@@ -38,7 +38,21 @@
     <div id="interface">
     <h1>TagsJavaScript</h1>
     <h3>Obs¹ : Essas tags precisam ser colocadas dentro da tag<br> < script>< /script></h3>
+    <h3>Obs² : A posições dos comandos altera o funcionamento, ou seja, se colocar o script antes do body, ele será executado primeiro</h3>
+
+    <strong>alert("Olá, Mundo!");</strong> <br>
+    alert = janelinha chata quando entra no site <br><br>
+
+    <strong>document.write("Olá, Mundo, hoje é dia " + Date());</strong> <br>
+    document.write = escreve no documento <br>
+    Date() = Função Date( os Parênteses informa isso ) informa a Semana + Mês + Dia + Ano + Hora + Min + seg + GMT <br><br>
+    
+    <strong>function nomedafuncao() { } </strong><br>
+    Tudo que estiver dentro de () ´são Parâmetros <br>
+    Tudo que estider dentro de {} são Códigos <br>
+    <br>
     -------- <strong>Letra N</strong> --------
+
     <p><strong>var n0 = window.prompt('Digite o número: ')</strong><br>
     Isso mostra uma janela e guarda o valor digitado na var n0
     </p>
@@ -82,6 +96,25 @@
         Se a pessoa colocar 7 e 7.7, a resposta será 14.7, pois<br> convertemos os 2 númeres antes em reais / flutuantes<br>
         </p>
 
+        <p><strong>Letra O</strong></p>
+
+        <p><strong>onclick</strong></p>
+        Quando o usário clicar vai acontecer algo.<br>
+        Exemplo : onlick ="quebraLampada"<br>
+        Quando o usuário clicar vai chamar a função quebraLampada<br><br>
+
+        <p><strong>onmousemove</strong></p>
+        Quando o usuário passar o mouse sobre o objeto, vai disparar algo <br>
+        Exemplo : onmousemove = "acendeLampada"<br>
+        Quando o usário passar o mouse vai chamar a função acendeLampada <br>
+
+        <p><strong>onmouseout</strong></p>
+        Quando o usuário tirar o mouse do objeto, vai acontecer algo <br>
+        Exemplo : onmouseout = "lampada-apagada" <br>
+        Quando o usuário tirar o mouse vai chamar a função lampada-apagada <br>
+
+        <p><strong>Letra V</strong></p>
+        
         <p>
         <strong>var nome = window.prompt</strong>("Qual é o seu nome ?") <br>
         O comando window.prompt só lê string<br>
