--- a/Historico.html
+++ b/Historico.html
@@ -41,6 +41,12 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>15/02 Quarta-Feira</strong> 3.0 <br>
+    Adicionei o JogoPerguntas e PerguntasRespostas<br>
+    JogoPerguntas = É um jogo de perguntas, irei atualizar diariamante com várias <br>
+    PerguntasRespostas = Banco de respostas do JogoPerguntas
+    <br><br>
+
     <strong>14/02 Terça-Feira</strong> 2.9 <br>
     Bom, hoje foi o dia do overflow, sai colocando em TODAS páginas do site, combinado com width e height ele fica muito bom, usem !!! <br>
     Atualizei a Página Principal, PáginaHTML, TagsCSS, TagsJavaScript <br>
