--- a/Dicas.html
+++ b/Dicas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicas</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="estilo05.css">
+    <link rel="stylesheet" href="Dicas.css">
 </head>
 <body>
     <ul>
@@ -22,6 +22,8 @@
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -147,6 +149,9 @@
     <p><a href="https://lexica.art/" target="_blank">Lexica</a></p>
     <p>Crie Imagens com base em Texto</p>
 
+    <p><a href="https://www.linguee.com.br/" target="_blank">Linguee</a></p>
+    <p>Esse site eu uso pra procurar palavras em inglês > português , é um Dicionário online</p>
+    
     <p><a href="https://www.midjourney.com/home/?callbackUrl=%2Fapp%2F" target="_blank">MindJourney</a></p>
     <p>Crie imagens baseadas em texto ( Recomendo usar no discord )</p>
 
