--- a/Historico.html
+++ b/Historico.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico</title>
-    <link rel="stylesheet" href="estilo07.css">
+    <link rel="stylesheet" href="Historico.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
@@ -23,6 +23,8 @@
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -37,9 +39,17 @@
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+
     <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+
+    <strong>16/02 Quinta-Feira</strong> 3.1 <br>
+    Adicionei mais 5 perguntas ao JogoPerguntas e também adicionei mais coisas no banco de dados chamado de PerguntasRespostas <br>
+    Eu fiz 1 coisa muito errada no site e futuramente pretendo resolver. Na hora que eu fui estilizar as páginas, acabei colocando estilo01.css até estilo24.css, pois eu estava me guiando pelos números da lista, o que é um erro. <br>
+    Recomendo que sempre que forem estilizar alguma página, coloquem o mesmo nome do documento hmtl, isso ajuda a lembrar qual estilo é de qual página <br>
+    Somente a PáginaPrincioa, Dicas, Histórico, JogoCobrinha, JogoCobrinhax2 e JogoPerguntas estão com a formatação correta
+    <br><br>
 
     <strong>15/02 Quarta-Feira</strong> 3.0 <br>
     Adicionei o JogoPerguntas e PerguntasRespostas<br>
