--- a/JogoCobrinhax2.html
+++ b/JogoCobrinhax2.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JogoCobrinhaCell</title>
-    <link rel="stylesheet" href="estilo08.css">
-    <script src="codigo05.js"></script>
-    <script src="codigo07.js"></script>
+    <link rel="stylesheet" href="JogoCobrinha.css">
+    <script src="JogoCobrinha01.js"></script>
+    <script src="JogoCobrinhax202.js"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
