--- a/NomeIdiomas.html
+++ b/NomeIdiomas.html
@@ -23,6 +23,8 @@
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -37,6 +39,7 @@
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    
     <div id="interface">
     <h1 align="center"><strong>Meu nome em vários idiomas</strong></h1>
 
