--- a/PerguntasRespostas.html
+++ b/PerguntasRespostas.html
@@ -12,6 +12,22 @@
 	</ul>
     <h1>Banco de Dados das Perguntas</h1>
     <h3>Aqui eu irei colocar as respostas das Perguntas</h3>
+    
+    <ul>
+        <li>Inglês</li>
+        <ul>
+            <li>Absolutely (ÁbSâLuTLi) = Com certeza</li>
+            <li>Deal ( Diâl ) = Combinado</li>
+            <li>Hi ( Rai ) = Oi</li>
+            <li>Hurry ( RãRi ) = Se apresse</li>
+            <li>Me ( mi ) = Eu </li>
+            <li>No ( Nôu ) = Não </li>
+            <li>Sure ( Xâr ) = Claro </li>
+            <li>What ( UAt ) = O que ?</li>
+            <li>Where ( Uéâr ) = Onde ? </li>
+            <li>Yes ( Iés ) = Sim</li>
+        </ul>
+    </ul>
     <ul>
         <li>Adição</li>
         <ul>
