--- a/JogoPerguntas.html
+++ b/JogoPerguntas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perguntas</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilo15.css">
+    <link rel="stylesheet" href="JogoPerguntas.css">
 </head>
 
 <body>
@@ -25,6 +25,6 @@
         <button>Reiniciar</button>
         </div>
     </main>
-    <script src="codigo15.js" type="module"></script>
+    <script src="JogoPerguntas01.js" type="module"></script>
 </body>
 </html>
