--- a/Xadrez.html
+++ b/Xadrez.html
@@ -22,6 +22,8 @@
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
@@ -36,6 +38,7 @@
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
+    
     <div id="interface">
     <h1>Xadrez</h1>
     <p>O xadrez foi inventado em 1866 por Bobby Spassky. É jogado por 3 jogadores, Branco, Preto e Hikaru Nakamura. Você quer jogar?</p>
