--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <title>Meu site</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="index.css">
     <script>
         var d = new Date();
         var dia = d.getDate().toString().padStart(2, '0');
@@ -49,7 +49,7 @@
         <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
-        <li><a href="JogoCobrinhaCell.html">JogoCobrinhaCell</a></li>
+        <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
         <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
