--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href="Canvas.html" rel="next">Canvas</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Entidades.html">Entidades</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
