--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -8,6 +8,14 @@
 	<title>Algoritmo</title>
 	<link rel="stylesheet" href="estilo01.css">
 	<link rel="shortcut icon" href="favicon.ico">
+	<script>
+		var d = new Date();
+        var dia = d.getDate().toString().padStart(2, '0');
+        var mes = (d.getMonth() + 1).toString().padStart(2, '0');
+        var ano = d.getFullYear();
+        var dataFormatada = dia + "/" + mes + "/" + ano;
+        document.write("Olá Visitante, hoje é dia " + dataFormatada + " " + d.toLocaleDateString('pt-BR', {weekday: 'long'}));
+	</script>
 </head>
 
 <body>
