--- a/Dicas.html
+++ b/Dicas.html
@@ -7,6 +7,14 @@
     <title>Dicas</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="Dicas.css">
+    <script>
+        var d = new Date();
+        var dia = d.getDate().toString().padStart(2, '0');
+        var mes = (d.getMonth() + 1).toString().padStart(2, '0');
+        var ano = d.getFullYear();
+        var dataFormatada = dia + "/" + mes + "/" + ano;
+        document.write("Olá Visitante, hoje é dia " + dataFormatada + " " + d.toLocaleDateString('pt-BR', {weekday: 'long'}));
+    </script>
 </head>
 <body>
     <ul>
