--- a/NomeIdiomas.html
+++ b/NomeIdiomas.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NomeIdiomas</title>
-    <link rel="stylesheet" href="estilo12.css">
+    <link rel="stylesheet" href="NomeIdiomas.css">
     <link rel="shortcut icon" href="favicon.ico">
+    <script>
+        var d = new Date();
+        var dia = d.getDate().toString().padStart(2, '0');
+        var mes = (d.getMonth() + 1).toString().padStart(2, '0');
+        var ano = d.getFullYear();
+        var dataFormatada = dia + "/" + mes + "/" + ano;
+        document.write("Olá Visitante, hoje é dia " + dataFormatada + " " + d.toLocaleDateString('pt-BR', {weekday: 'long'}));
+    </script>
 </head>
 
 <body>
