--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,12 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>20/02 Segunda-Feira </strong> 3.3 <br>
+    Adicionei mas sites em Dias <br>
+    Criei a página Extensões, nela irei dar dicas disso, tanto pro VSC tanto pro Navegador <br>
+    Attualização fraca, pois estava procurando sites pra me aprofundar, testando códigos, criando geradores, mas amanhã já volto com pressão total
+    <br><br>
+
     <strong>17/02 Sexta-Feira</strong> 3.2 <br>
     Agora todas páginas tem seu estilo <br>
     Coloquei a informação de Data em todas também <br>
