--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Entidades.html">Entidades</a></li>
         <li><a href="Explicando.html">Explicando</a></li>
+        <li><a href="Extensoes.html">Extensões</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
@@ -58,6 +59,7 @@
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
         <li><a href="Passos.html">Passos</a></li>
+        <li><a href="Projetos.html">Projetos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
