--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,10 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>21/02 Terça-Feira </strong> 3.4 <br>
+    Criado o menu TagsJava
+    <br><br>
+
     <strong>20/02 Segunda-Feira </strong> 3.3 <br>
     Adicionei mas sites em Dias <br>
     Criei a página Extensões, nela irei dar dicas disso, tanto pro VSC tanto pro Navegador <br>
