--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJava.html">TagsJava</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
         <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
