--- a/Atalhos.html
+++ b/Atalhos.html
@@ -80,7 +80,7 @@
     Selecione algo e aperte essas teclas, escolha Envolver com abreviação e depois selecione sua tag<br>
     Ex : Esqueci de por negrito em <strong>Atalhos</strong>, dai eu faço isso e escolho a tag strong e aperto Enter</p>
 
-    <p>CTRL + <br>
+    <p><strong>CTRL +</strong> <br>
     CTRL + = Comentar código ou Remover comentário<br>
     CTRL + PageUP/PageDown = Navega entre Abas<br>
     CTRL + B = Ativa/Desativa Barra Lateral<br>
@@ -91,12 +91,18 @@
     CTRL + N = Cria um arquivo<br>
     CTRL + O = Abre arquivo<br>
     CTRL + S = Salvar arquivo<br>
-    CTRL + Z = Desfaz ação</p><br>
+    CTRL + Z = Desfaz ação</p>
     
-    <p>CTRL Duplo<br>
+    <p><strong>CTRL Duplo</strong><br>
     CTRL K + CTRL + O = Abre um diretório de arquivos<br>
     CTRL + Alt + Enter = Substituir arquivos<br>
     Shift + Alt + \/ = Duplicar linha</p>
-    </div>
+
+    <p><strong>Shift + Tab</strong> <br>
+    Seleciona o texto e aperta esses 2 pro texto ir pra esquerda <br> </p>
+
+    <p><strong>Tab</strong> <br>
+    Seleciona o texto e aperte Tab pra ele ir pra direita</p>
+     </div>
 </body>
 </html>
