--- a/Dicas.html
+++ b/Dicas.html
@@ -52,9 +52,13 @@
     <h3>Minha recomendação :</h3>
     <ul>
         <li>Algoritmo = Curso em Vídeo</li>
+        <li>Assembly = Fernando Anselmo com o mycompiler</li>
+        <li>C = Professor José de Assis</li>
+        <li>C-PluPlus / C++ =  </li>
+        <li>C-Sharp / C# = </li>
         <li>CSS3 = Curso em Vídeo</li>
         <li>Git & Github = Curso em Vídeo</li>
-        <li>Inteligência Artificial = Fiap</li>
+        <li>Inteligência Artificial = Data Science</li>
         <li>Java = Curso em Vídeo</li>
         <li>JavaScript = Curso em Vídeo</li>
         <li>MySQL = Curso em Vídeo</li>
@@ -71,6 +75,10 @@
     <p>Algoritmo, CSS 3, Git & Github, HTML 5, Java, JavaScript, MySQL, Python 3 </p>
     <p>Link citado : <a href="https://www.cursoemvideo.com/cursos/" target="_blank">https://www.cursoemvideo.com/cursos/</a></p>
 
+    <h2><a href="https://www.datascienceacademy.com.br/">Data Science Academy</a></h2>
+    <p>Inteligência Artificial</p>
+    <p>Link citado : <a href="https://www.datascienceacademy.com.br/">https://www.datascienceacademy.com.br/</a></p>
+
     <h2><a href="https://on.fiap.com.br/local/nanocourses/index.php" target="_blank">Fiap</a></h2>
     <p>Big Data, Blockchain, Design Gráfico, Inteligência Artificial, Java, Mobile Marketing, Python, User Experience</p>
     <p>Link citado : <a href="https://on.fiap.com.br/local/nanocourses/index.php" target="_blank">https://on.fiap.com.br/local/nanocourses/index.php</a></p>
@@ -83,6 +91,9 @@
     <p>HTML CSS, JavaScript, Programação e React</p>
     <p>Link citado : <a href="https://learnjavascript.online/" target="_blank">https://learnjavascript.online/</a></p>
 
+    <h2><a href="https://perfil.napratica.org.br/e" target="_blank">NaPratica</a></h2>
+    <p>Ciência da Computação de Harvard 2022 Legendado</p>
+
     <h2><a href="https://pt.khanacademy.org/profile/me/courses" target="_blank">Khan Academy</a></h2>
     <p>Ciência da Computação e Programação</p>
     <p>Link citado : <a href="https://pt.khanacademy.org/profile/me/courses" target="_blank">https://pt.khanacademy.org/profile/me/courses</a> </p>
@@ -92,14 +103,30 @@
     <p>Link citado : <a href="https://www.w3schools.com/" target="_blank">https://www.w3schools.com/</a></p>
 
     <h1>Youtube</h1>
+
+    <h2>Bóson Treinamentos</h2>
+    <p>C++, CSS, Inteligência Artificial, Python, Portugol Studio, WordPress</p>
+    <p>Link : <a href="https://www.youtube.com/@bosontreinamentos/playlists?view=1&sort=dd&shelf_id=0" target="_blank">https://www.youtube.com/@bosontreinamentos/playlists?view=1&sort=dd&shelf_id=0</a></p>
     <h2>Didática Tech</h2>
     <p>Python Machine Learning</p>
     <p>Link : <a href="https://www.youtube.com/playlist?list=PLyqOvdQmGdTR46HUxDA6Ymv4DGsIjvTQ-" target="_blank">https://www.youtube.com/playlist?list=PLyqOvdQmGdTR46HUxDA6Ymv4DGsIjvTQ-</a></p>
 
+    <h2>Cida Castello</h2>
+    <p>Java, Lógica de Programação, Python</p>
+    <p>Link : <a href="https://www.youtube.com/@CidaCastello/playlists" target="_blank">https://www.youtube.com/@CidaCastello/playlists</a></p>
+
     <h2>Esteice Janaina</h2>
     <p>Inteligência Artificial e Scratch</p>
     <p>Link : <a href="https://www.youtube.com/@EsteiceJanaina/playlists" target="_blank">https://www.youtube.com/@EsteiceJanaina/playlists</a></p>
+
+    <h2>Fernando Anselmo</h2>
+    <p>Assembly, C, Docker, Gimp, Java, Linux, Portugol Studio, Python, Vue.DevOps</p>
+    <p>Link : <a href="https://www.youtube.com/@FernandoAnselmo/playlists" target="_blank">https://www.youtube.com/@FernandoAnselmo/playlists</a></p>
     
+    <h2>Professor José de Assis</h2>
+    <p>Arduíno, C, HTML5 CSS3, Java, Java MySQL, Linux </p>
+    <p>Link : <a href="https://www.youtube.com/@ProfessorJosedeAssis/playlists?view=1&sort=dd&shelf_id=0" target="_blank">https://www.youtube.com/@ProfessorJosedeAssis/playlists?view=1&sort=dd&shelf_id=0</a></p>
+
     <h2>UNIVESP</h2>
     <p>Ciência de Dados, Eixo de Computação, Engenharia da Computação e Tecnologia da Informação</p>
     <p>Link : <a href="https://www.youtube.com/@univesptv/playlists" target="_blank"></a></p>
@@ -243,6 +270,9 @@
 
     <p><a href="https://www.science.co.il/internet/html/Smileys.php" target="_blank">science</a></p>
     <p>Emojis</p>
+
+    <p><a href="https://scratch.mit.edu/" target="_blank">Scratch</a></p>
+    <p>Criar coisas </p>
 
     <p><a href="https://www.showwcase.com/" target="_blank">showcase</a></p>
     <p>não explorei muito</p>
