--- a/TagsHTML.html
+++ b/TagsHTML.html
@@ -50,9 +50,10 @@
     
     <div id="interface">
     <h1>Tags HTML</h1>
-        <p>obs¹ = Isso são tags que precisam estar juntas</p>
-        <p>Por exemplo : < strong>, se eu juntar o <, não irá aparecer o código, por isso estou notificando antes</p>
-        <p>obs² = Mensagem / Texto = A pessoa pode escrever qualquer coisa </p><br>
+    <p>HMTL foca em Semântica / Significado <br> Tag vermelha = obsoleto</p>
+    <p>obs¹ = Isso são tags que precisam estar juntas</p>
+    <p>Por exemplo : < strong>, se eu juntar o <, não irá aparecer o código, por isso estou notificando antes</p>
+    <p>obs² = Mensagem / Texto = A pessoa pode escrever qualquer coisa </p><br>
     <p>
         1¹ <strong>< a href="UrldoSite rel="prev">Mensagem< /></strong><br>
         Serve pra abrir um link externo<br>
@@ -100,6 +101,10 @@
         6¹ <strong>< class>< /class></strong><br> Identifica vários objetos
     </p>
 
+    <p>
+        <strong>< code>< /code></strong><br>
+        Esse comando é pra colocar código de outras linguagens dentro do HTML <br>
+    </p>
     ---<strong> Letra D </strong>---
 
     <p>
@@ -142,8 +147,10 @@
     <p>
         11¹ <strong>< img src="html5.png" alt="Logo de HTML5"></strong><br>
         Adiciona imagem que ta na mesma pasta, caso esteja em outro basta digitar /nomedapasta/nomedoarquivo<br> 
-        ou caso esteja antes colocar ../nomedapasta/nomedoarquivo<br>
-        Em alt fica uma explicação da imagem
+        caso esteja antes colocar ../nomedapasta/nomedoarquivo<br>
+        caso esteja em algum endereço é só colar o link <br>
+        Em alt fica uma explicação da imagem <br>
+        CNTRL + Espaço = seleciona o arquivo-
     </p>
 
     <p>
@@ -180,6 +187,11 @@
         12¹ <strong>< li>< /li></strong><br>
         É um item de uma lista.<br>
         Por ser um item da lista, antes a pessoa precisa ter colocado < ol>< /ol> ou < ul> < /ul><br>
+        A partir da versão 5 do HMTL, o li no final ficou sendo opcional <br>
+    </p>
+    <p>
+        13² <strong>lorem + Enter</strong><br>
+        Escreve um texto aleatório <br>
     </p>
     <p>
         13¹ <strong> < li>< a href="ProjetoAlfa.html">ProjetoAlfa< /a>< /li></strong><br>
@@ -204,6 +216,22 @@
         Aqui ele está referindo a stylesheet ( Folhas de Estilo ) chamando arquivo estilo.css<br>
         Eu estou dizendo pro Navegador usar o estilo do arquivo estilo.css que está na pasta<br>
         Usar no < head></ head> ( Ver <a href="PaginaHTML.html">PáginaHTML</a> ) embaixo de < title>Meu site< /title>
+    </p>
+
+    ----- <strong> Letra O </strong> -----
+
+    <p> < ol>< /ol> <br>
+    ol = Lista ordenada <br>
+    Em type nós temos 5 tipos : <br>
+    1 = padrão, número em 1, 2, 3, etc<br>
+    A = ordem alfabética Maiúscula : A, B, C, etc<br>
+    a = ordem alfabética minúscula : a, b, c, etc<br>
+    I = números romanos Maiúscula : I, II, III, etc<br>
+    i = números romanos minúscula : i, ii, iii, etc<br> <br>
+    
+    < ol type="i" start="3"> < /ol><br>
+    Se eu quiser começar com o 3° elemento, coloco star ="3"<br>
+    Isso irá aparecer : iii Acordar depois iv Ligar para o João<br>
     </p>
 
     -----<strong> Letra P </strong>-----
