--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <li><a href="JogoCobrinha.html">JogoCobrinha</a></li>
         <li><a href="JogoCobrinhax2.html">JogoCobrinhax2</a></li>
         <li><a href="JogoPerguntas.html">JogoPerguntas</a></li>
+        <li><a href="JogoPerguntas2.html">JogoPerguntas2</a></li>
         <li><a href="PerguntasRespostas.html">PerguntasRespostas</a></li>
         <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
