--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,13 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>01/03 Quarta-Feira</strong> 3.5 <br>
+    Desculpe ficar muito tempo ofline, eu estava tentando me achar. <br>
+    Explicando melhor : Eu estava com medo de terminar o curso e ficar estagnada, pois todo curso tem isso, ele pode te ensinar TUDO, mas você que deve continuar <br>
+    Enfim, voltei adicionando mais dicas <br>
+    O jogo Perguntas 2 não está funcionando <br>
+    <br><br>
+
     <strong>21/02 Terça-Feira </strong> 3.4 <br>
     Criado o menu TagsJava
     <br><br>
