--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,12 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>11/03 Sábado</strong> 3.6 <br>
+    Adicionei Jogo de Perguntas 2 com 12 perguntas ( na verdade tem mais, porém depois repete) <br>
+    Ainda estou tentando randomizar, mas ta difícil <br>
+    É isso galera
+    <br><br>
+    
     <strong>01/03 Quarta-Feira</strong> 3.5 <br>
     Desculpe ficar muito tempo ofline, eu estava tentando me achar. <br>
     Explicando melhor : Eu estava com medo de terminar o curso e ficar estagnada, pois todo curso tem isso, ele pode te ensinar TUDO, mas você que deve continuar <br>
