--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,11 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>13/03 Segunda-Feira</strong> 3.7 <br>
+    Atualmente só estou adicionando mais palavras no JogoPerguntas2 <br>
+    Hoje coloquei idioma japonês <br>
+    <br><br>
+
     <strong>11/03 Sábado</strong> 3.6 <br>
     Adicionei Jogo de Perguntas 2 com 12 perguntas ( na verdade tem mais, porém depois repete) <br>
     Ainda estou tentando randomizar, mas ta difícil <br>
