--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,11 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>16/03 Quinta-Feira</strong> 3.8 <br>
+    Atualização demoradada pois tive febre na segunda e fiquei segunda e terça de febre, quarta ainda estava com dor de cabeça, hoje to com corpo e ouvido doendo mais a garganta ruim, mas consegui atualizar <br>
+    Atualmente estou focando mais no jogo Perguntas 2, ignorem as opções, futuramente irei corrigir elas, dificultando mais ainda
+    <br><br>
+
     <strong>13/03 Segunda-Feira</strong> 3.7 <br>
     Atualmente só estou adicionando mais palavras no JogoPerguntas2 <br>
     Hoje coloquei idioma japonês <br>
