--- a/Historico.html
+++ b/Historico.html
@@ -52,6 +52,11 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>18/03 Segunta-feira 2024</strong> 3.9<br>
+    Depois de 1 ano e 2 dias sem postar, eis que eu surjo do nada <br>
+    Estarei dando um tempo do meu dia pra atualizar o blog, hoje só irei testar algumas coisas, futuramente irei testar
+    <br><br>
+    
     <strong>16/03 Quinta-Feira</strong> 3.8 <br>
     Atualização demoradada pois tive febre na segunda e fiquei segunda e terça de febre, quarta ainda estava com dor de cabeça, hoje to com corpo e ouvido doendo mais a garganta ruim, mas consegui atualizar <br>
     Atualmente estou focando mais no jogo Perguntas 2, ignorem as opções, futuramente irei corrigir elas, dificultando mais ainda
